<resources>
    <string name="app_name">Strange News</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="saved">Saved</string>
    <string name="categories">Categories</string>
    <string name="sources">Sources</string>
    <string name="languages">Languages</string>
    <string name="countries">Countries</string>
    <string name="setting">Setting</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breaking_news">Breaking News</string>
    <string name="recent">Recent</string>
    <string name="search_hint">Key words</string>
    <string name="more">More</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="dark_mode">Dark mode</string>
    <string name="daily_news">Daily news</string>
    <string name="_08_00">08:00</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="empty">#empty</string>
    <string name="date">Date</string>
    <string name="limit">Limit</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string-array name="sort_array">
        <item>Recent</item>
        <item>Lasted</item>
        <item>Author</item>
        <item>Title</item>
        <item>Languages</item>
        <item>Countries</item>
        <item>Sources</item>
    </string-array>
</resources>
